$Id: CHANGES,v 1.85 2000/11/03 18:28:58 stelian Exp $

Changes between versions 0.4b19 and 0.4b20 (released ???????????????)
=====================================================================

1.	Fixed a small compilation problem due to a change
	in the definintion of the struct sigaction in
	glibc 2.0 / libc5. Thanks to Gunther Schlegel 
	<schlegel@riege.de> for reporting the bug and to
	Dave Platt <dplatt@snulbug.mtview.ca.us> for suggesting
	a fix.

2.	Modified the label and uuid analysis in order to be 
	self-contained (independant of kernel/libc headers). This 
        should fix the compile with older kernel/libc headers and
	will preserve the functionality. Thanks to Bernhard Erdmann
	<bernhard.erdmann@gmx.de> for reporting the bug.

3.	The 'exclude inode' option, if applied to a directory
	inode, excludes now correctly all the leaves of this 
	directory. Thanks to John R. Dennison 
	<gerdesas@users.sourceforge.net> for reporting the bug.

4.	Fixed the '-e' option to disable the possibility
	to exclude the root inode (which causes the dumps to
	be unreadable by restore). Prevented array overflow
	when multiple -e options are used.

5.	Fixed dump to correctly interpret a filesystem argument
	which is a mountpoint and it is not an absolute path 
	(as specified in the fstab). Thanks to Bernhard R. Erdmann 
	<be@berdmann.de> for reporting the bug.

6.	Made dump able to backup files larger than 2 GB. Note that
	dump still doesn't cope with files larger than 4 GB.

7.	Restore the real uid and gid before invoking an external
	RSH program (big hole when dump or restore is suid root!).

Changes between versions 0.4b18 and 0.4b19 (released August 20, 2000)
=====================================================================

1.	Fixed the signal handling in dump (which I broke in 0.4b17)
	which was causing several strange dump failures (dump
	hanged or segmentation faults etc). 

2.	Specified the default blocksize in the dump man page.
